Add usage guide for connecting bus test apps